# nano-llm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ZH.md  align.py  configuration_nano_lm.py  convert.py  crawl_data.py  data.py  deduplicate.py  docker-compose-swarm.yml  docker-compose.yml  eval_benchmarks.py  export_dora.py  export_gguf.py  export_onnx.py  grpo.py  merge_models.py  model.py  modeling_nano_lm.py  pack_binaries.py  prepare_data.py  pretrain.py  pretraining_evaluation_report.md  prompts.md  pyproject.toml  quantize.py  requirements.txt  run_unified_pipeline.py  serve.py  todo.md  tokenizer.py  train.py  train_tokenizer.py
.antigravitycli/: 7af33817-3a47-4bc7-896e-a982ad3888c3.json
config/: __init__.py
data/: clean_unk.py  custom_tokenizer.json  download_eval_benchmarks.py  download_premium_data.py  download_pretrain_corpus.py  download_ultra_alignment_data.py  pack_fast_binaries.py  pipeline.py  stream_tokenize_to_bin_parallel.py  train_dpo.jsonl  train_fast_tokenizer.py  train_sft.jsonl  val_data.jsonl
docs/: attention_and_position.md  context_engineering.md  deepseek_upgrade.md  performance_benchmarks.md  phase_issues_report.md  risk_mitigation.md  swarm_multi_node_deployment.md
grpo/: __init__.py  dataset.py  engine.py  rewards.py
model/: __init__.py  config.py  mla.py  moe.py
scratch/: diagnose_dpo.py  merge_shards.py
scripts/: cluster_burnin.py  detect_contamination.py  run_align_ddp.sh  run_full_pipeline.sh  run_pretrain_ddp.sh  run_pretrain_mla_triton.sh  run_train_ddp.sh  setup.sh  test_e2e_pipeline.py
(+73 files in other folders)
